--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @Danielmagox @izm20 @Sozhia @PanchoMen
+* @Danielmagox @izm20 @PanchoMen
 *.ts @raulanatol
 *.js @raulanatol
 *test* @raulanatol @DanielRamosAcosta @yodralopez
