--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,13 @@ services:
       - backend
 
   db:
-    image: "mariadb:10.5.6"
-    container_name: "mariadb"
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABE=database
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=root
+    image: mongo:3.6
+    container_name: mongoDB:3.6
+    volumes:
+      - ./mongo-data:/data/mongodb
+    restart: always
+    ports:
+      - "27017:27017"
     networks:
       - backend
 
