--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fullstacktf/recetas-backend.git"
@@ -22,15 +18,30 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15"
   },
+  "scripts": {
+    "build": "tsc",
+    "dev": "nodemon src/index.ts",
+    "test": "jest",
+    "lint": "eslint --max-warnings 0 . --ext .ts"
+  },
+  "jest": {
+    "preset": "ts-jest"
+  },
   "devDependencies": {
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@cowcoders/eslint-config": "^1.1.1",
     "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.14",
     "@types/mongodb": "^3.5.33",
     "@types/mongoose": "^5.10.1",
     "@types/node": "^14.14.8",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
+    "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
