--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
+    "prettier": "^2.2.0",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
