--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
-version: "3.7"
+version: '3.7'
 services:
   server:
     build:
       context: .
-      dockerfile: "node-12.19.0.dockerfile"
-    container_name: "app_node"
+      dockerfile: 'node-12.19.0.dockerfile'
+    container_name: 'app_node'
     ports:
-      - "8080:80"
+      - '3000:3000'
     depends_on:
       - db
     networks:
@@ -14,12 +14,12 @@ services:
 
   db:
     image: mongo:3.6
-    container_name: mongoDB:3.6
+    container_name: mongoDB-3.6
     volumes:
       - ./mongo-data:/data/mongodb
     restart: always
     ports:
-      - "27017:27017"
+      - '27017:27017'
     networks:
       - backend
 
