--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,23 +11,24 @@ jobs:
     name: Deploy and push image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Get app version
-        id: app-version
-        uses: martinbeentjes/npm-get-version-action@v1.1.0
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Get app version
+        id: app-version
+        uses: martinbeentjes/npm-get-version-action@v1.1.0
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          with:
           context: .
-          file: ./Dockerfile
+          file: ./node-12.19.0.dockerfile
           push: true
           tags: |
             snapfork/snapfork-backend:latest
