--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,23 @@
 version: '3.7'
 services:
-  server:
-    build:
-      context: .
-      dockerfile: 'node-12.19.0.dockerfile'
-    container_name: 'app_node'
-    ports:
-      - '3000:3000'
-    depends_on:
-      - db
-    networks:
-      - backend
-
   db:
     image: mongo:3.6
-    container_name: mongoDB-3.6
+    container_name: mongobd
     volumes:
       - ./mongo-data:/data/mongodb
     restart: always
     ports:
       - '27017:27017'
+    networks:
+      - backend
+
+  server:
+    image: snapfork/snapforkbackend:latest
+    container_name: 'api_backend'
+    ports:
+      - '3000:3000'
+    depends_on:
+      - db
     networks:
       - backend
 
