--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,8 @@ on:
       - cd
 
 jobs:
-  deploy_image_and_push:
-    name: Deploy and push image to Docker Hub
+  build_image_and_push:
+    name: Build and push image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out Git repository
@@ -36,3 +36,15 @@ jobs:
       - name: Show new version
         run: echo 'New version snapfork-backend:${{steps.app-version.outputs.current-version}} generated'
         shell: bash
+  deploy_new_image:
+    needs: [build_image_and_push]
+    name: Deploy the new image for backend in the server
+    runs-on: ubuntu-latest
+    steps:
+      - name: Execute SSH Command
+        uses: appleboy/ssh-action@v0.1.4
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          script: ./app/snapfork/deploy.sh backend
