--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,20 @@ services:
     volumes:
       - ./mongo-data:/data/mongodb
     restart: always
-    ports:
-      - '27017:27017'
+    expose:
+      - '27017'
     networks:
       - server
 
   backend:
     image: snapfork/snapforkbackend:latest
     container_name: 'app_backend'
+    env_file:
+      - .env
     volumes:
       - /app/snapfork/public:/public
-    ports:
-      - '3000:3000'
+    expose:
+      - '3000'
     depends_on:
       - db
     networks:
