--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     container_name: 'app_backend'
     volumes:
       - /app/snapfork/public:/public
+      - /app/snapfork/API:/API
     ports:
       - '3000:3000'
     depends_on:
