--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "helmet": "^4.2.0",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15",
